# IB-TWSAPI

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/core/: client.rs  common.rs  contract.rs  decoder.rs  errors.rs  messages.rs  mod.rs  order.rs
src/examples/: example_wrapper.rs  mod.rs
src/serde_tws/: de.rs  error.rs  mod.rs  ser.rs
src/tests/: test_eclient.rs  test_messages.rs
