[package]
name = "ibtwsapi"
version = "0.1.0"
authors = ["bobbermani@gmail.com", "brett.miller@sparkstart.com"]
edition = "2018"
description = "A fork of the IBKR-API-Rust package that uses a simpler interface paradigm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ibtwsapi"
path = "src/lib.rs"

[[bin]]
name = "ibtws_client"
path = "src/bin/manual_tests.rs"

[dependencies]
enum_index = "0.2.0"
enum_index_derive = "0.2.0"
bzip2 = "0.3.3"
log = "0.4.8"
log4rs = "0.12.0"
bytebuffer = "0.2.1"
encoding = "0.2"
num = "0.4.0"
num-derive = "0.3"
num-traits = "0.2.12"
byteorder = "1.3.4"
ascii = "1.0.0"
thiserror = "1.0.30"
from-ascii = "0.0.1"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = { version = "1.17", features = ["serde-str"] }
rust_decimal_macros = "1.17"
float-cmp = "0.8.0"
chrono = "0.4.11"
strum = "0.23"
strum_macros = "0.23"
